--- a/templates/home.html
+++ b/templates/home.html
@@ -95,7 +95,8 @@
 
                 <div class="row justify-content-between">
                     <div class="col-lg-5 d-flex align-items-center justify-content-center about-img">
-                        <img src="../assets/img/depositphotos_509334224-stock-illustration-soothsayer-fortune-teller-guessing-on.jpeg" class="img-fluid" alt="" data-aos="zoom-in">
+                        <img src="../assets/img/depositphotos_509334224-stock-illustration-soothsayer-fortune-teller-guessing-on.jpeg"
+                            class="img-fluid" alt="" data-aos="zoom-in">
                     </div>
                     <div class="col-lg-6 pt-5 pt-lg-0">
                         <h3 data-aos="fade-up">Discover Your Fate: How to Use Our Tarot Reader Web App.
@@ -132,7 +133,7 @@
                         <h2>Choose a Reading</h2>
                         <p>Select the type of reading you want</p>
                     </div>
-                    <form method="post" role="form" class="php-email-form">
+                    <form method="post" role="form" class="php-email-form" name="want">
                         <div class="row">
                             <div class="form-group col-md-12">
                                 <label for="reading-type" style="font-weight: bold;">Type of Reading:</label>
@@ -152,22 +153,35 @@
                                         <input type="radio" name="reading-type" id="general" value="general"> General
                                         Life Advice
                                     </label>
+                                    <br>
+                                    <label for="horoscope">
+                                        <input type="radio" name="reading-type" id="horoscope" value="horoscope">
+                                        Horoscope
+                                    </label>
+                                    <br>
                                 </div>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <label for="dob" style="font-weight: bold;">Date of Birth:</label>
+                                <input type="date" name="dob" id="dob" required>
                             </div>
                             <div class="text-center">
                                 <button type="submit" onclick="event.preventDefault(); 
-                            if (document.getElementById('love').checked) { 
-                                window.location.href = '/love_reading'; 
-                            } else if (document.getElementById('career').checked) { 
-                                window.location.href = '/career_reading'; 
-                            } else if (document.getElementById('general').checked) { 
-                                window.location.href = '/general_reading'; 
-                            }" style="background-color: #eb5d1e; border-radius: 20px; padding: 10px 20px; color: white; font-weight: bold; border: none; transition: all 0.3s ease;">Get
+                          if (document.getElementById('love').checked) { 
+                            window.location.href = '/love_reading'; 
+                          } else if (document.getElementById('career').checked) { 
+                            window.location.href = '/career_reading'; 
+                          } else if (document.getElementById('general').checked) { 
+                            window.location.href = '/general_reading'; 
+                          } else if (document.getElementById('horoscope').checked) { 
+                            window.location.href = '/horoscope'; 
+                          }" style="background-color: #eb5d1e; border-radius: 20px; padding: 10px 20px; color: white; font-weight: bold; border: none; transition: all 0.3s ease;">Get
                                     reading</button>
                             </div>
                         </div>
                     </form>
                 </div>
+
             </section>
         </div>
         <!-- End Tarot Card Section -->
